# Wenceslas

./: CMakeLists.txt  README  Wenceslas.kdev4
.kdev4/: Wenceslas.kdev4
dbs/: test.sqlite
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.ini  ui_wenceslasii.h  wenceslasii
release/.cmake/api/v1/reply/: cmakeFiles-v1-9febf0e449470e491dea.json  codemodel-v2-f2ea5f1ceb3756d63b6f.json  directory-.-Release-72127dc879299252c264.json  index-2021-09-30T08-30-29-0757.json  target-wenceslasii-Release-6c26bf0475300f7bcc98.json  target-wenceslasii_autogen-Release-3d4774203c5d438ba3c1.json  (+1 more)
release/wenceslasii_autogen/: deps  moc_predefs.h
release/wenceslasii_autogen/UVLADIE3JM/: moc_evaltablemodel.cpp  moc_evaltablemodel.cpp.d  moc_mysortfilterproxymodel.cpp.d  moc_mytablemodelii.cpp  moc_mytablemodelii.cpp.d  moc_mytimeitemdelegate.cpp  moc_mytimeitemdelegate.cpp.d  moc_noteditabledelegate.cpp.d  moc_spinboxdelegate.cpp.d  moc_wenceslasii.cpp  moc_wenceslasii.cpp.d
src/: evaltablemodel.cpp  evaltablemodel.h  evaltablemodelii.cpp  evaltablemodelii.h  filterlineedit.cpp  filtertableheader.cpp  main_wenceslasii.cpp  mycategories.cpp  mycategories.h  mygenderitemdelegate.cpp  mygenderitemdelegate.h  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  mytablemodel.cpp  mytablemodel.h  mytablemodelii.cpp  mytablemodelii.h  mytime.h  mytimeitemdelegate.cpp  mytimeitemdelegate.h  noteditabledelegate.cpp  noteditabledelegate.h  spinboxdelegate.cpp  spinboxdelegate.h  wenceslasii.cpp  wenceslasii.h  wenceslasii.ui
